--- a/src/clientConfig.properties
+++ b/src/clientConfig.properties
@@ -1,5 +1,10 @@
-PhotosDirectory=e:/www/jeckelsImages/photoGallery/
-ResizedDirectory=e:/www/jeckelsImages/resized
+PhotosDirectory=/Volumes/Crucial X8/www/jeckelsImages/photoGallery/
+ResizedDirectory=/Volumes/Crucial X8/jeckelsImages/resized
 
-ResizedURL=file:///e:/www/jeckelsImages/resized/
-PhotosURL=file:///e:/www/jeckelsImages/photoGallery/
+ResizedURL=file:///Volumes/Crucial%20X8/www/jeckelsImages/resized/
+PhotosURL=file:////Volumes/Crucial%20X8/www/jeckelsImages/photoGallery/
+#PhotosDirectory=e:/www/jeckelsImages/photoGallery/
+#ResizedDirectory=e:/www/jeckelsImages/resized
+#
+#ResizedURL=file:///e:/www/jeckelsImages/resized/
+#PhotosURL=file:///e:/www/jeckelsImages/photoGallery/
