--- a/src/config.properties
+++ b/src/config.properties
@@ -1,6 +1,6 @@
 
-PhotosDirectory=e:/www/jeckelsImages/photoGallery
-ResizedDirectory=e:/www/jeckelsImages/resized
+PhotosDirectory=/Volumes/Crucial X8/www/jeckelsImages/photoGallery
+ResizedDirectory=/Volumes/Crucial X8/www/jeckelsImages/resized
 
-ResizedURL=/imageMapper/
-PhotosURL=/imageMapper/
+ResizedURL=file:///Volumes/Crucial%20X8/www/jeckelsImages/resized/
+PhotosURL=file:////Volumes/Crucial%20X8/www/jeckelsImages/photoGallery/
