--- a/src/config.properties
+++ b/src/config.properties
@@ -4,3 +4,11 @@ ResizedDirectory=/Volumes/Crucial X8/www/jeckelsImages/resized
 
 ResizedURL=file:///Volumes/Crucial%20X8/www/jeckelsImages/resized/
 PhotosURL=file:////Volumes/Crucial%20X8/www/jeckelsImages/photoGallery/
+
+# AWS S3 upload settings (optional). If missing, S3 uploads are disabled.
+S3Region=us-west-2
+S3OriginalsBucket=photo.jeckels.com
+S3ResizedBucket=resized.jeckels.com
+#S3KeyPrefix=photoGallery/
+
+ExportedPhotosDirectory=/Users/jeckels/Pictures/Exported
